--- a/public_html/test.html
+++ b/public_html/test.html
@@ -2,15 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="/css/w3.css">
+<title>Test</title>
 </head>
 
 <body>
-
-<span onclick="TongWenWFU.toggle()" style="cursor: pointer">簡繁切換</span>
-<br />
-
-中文內容......
+Content of the document......
 </body>
 
 </html>
